data/derived/fa15/progs/unify/prog2709.ml.out
Characters 91-93:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type (int -> 'a -> int) list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside int -> 'a -> int
